# STAR

./: LICENSE  README.md  pyproject.toml
scripts/: non_streaming.sh  simul_s2t.sh
src/: train_simul.py  train_w2v.py
src/data_utils/: data_module.py  preprocess_librispeech.py  preprocess_libritts.py  preprocess_mustc.py  train_tokenizer.py
src/lightning/: simul_trainer.py  wav2vec_trainer.py
src/models/: my_transformer.py  my_wav2vec.py  utils.py  w2v_asr.py  w2v_simul.py
