[tool.poetry]
name = "speechnuggets"
version = "0.1.0"
description = ""
authors = ["wtan12 <wtan12@jhu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.34.0"
torch = "2.0.0"
pytorch-lightning = "^2.1.0"
audiolm-pytorch = "^1.5.7"
black = "^23.9.1"
ruff = "^0.1.0"
fairseq = "^0.12.2"
torchaudio = "2.0.0"
wandb = "^0.15.12"
datasets = "^2.14.6"
soundfile = "^0.12.1"
librosa = "^0.10.1"
pydub = "^0.25.1"
einops = "^0.7.0"
pesq = "^0.0.4"
matplotlib = "3.8.0"
jiwer = "^3.0.3"
sentence-transformers = "^2.2.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
